components/janitor-bot/tests/snapshots/integration__pr-merge.snap
---
source: tests/integration.rs
expression: snapshot
---
response:
  command: "Merge { strategy: Squash }"
external_requests:
  - method: POST
    path: /api/v1/repos/anurag/k8s/issues/comments/200/reactions
    body:
      content: "+1"
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/5/reviews
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/5/reviews
    body:
      body: ~
      comments: ~
      commit_id: ~
      event: APPROVED
    service: forgejo
  - method: GET
    path: /api/v1/repos/anurag/k8s/pulls/5
    service: forgejo
  - method: POST
    path: /api/v1/repos/anurag/k8s/pulls/5/merge
    body:
      Do: squash
      MergeCommitID: ~
      MergeMessageField: ~
      MergeTitleField: ~
      delete_branch_after_merge: true
      force_merge: ~
      head_commit_id: ~
      merge_when_checks_succeed: ~
    service: forgejo
